# rabbit-spring

./: .gitignore  LICENSE  README.md  pyproject.toml  pyrightconfig.json
examples/: solve_smoke.py
src/rabbit_spring/: __init__.py  api.py  constants.py  errors.py  fit.py  generation.py  geometry.py  mass_budget.py  models.py  physics.py  pitch.py  score.py  solver.py  targets.py  tokens.py
src/rabbit_spring/backends/: __init__.py  freecad.py
src/rabbit_spring/backends/freecad/: __init__.py  _export.py  _loader.py  _shapes.py  _visual.py  _writers.py  export.py  loader.py  shapes.py  types.py  visual.py
src/rabbit_spring/models/: __init__.py  base.py  candidates.py  config.py  geometry.py  mass.py  payloads.py
tests/: __init__.py  helpers.py  test_export_public_behavior.py  test_freecad_backend.py  test_freecad_integration.py  test_public_api.py  test_solver.py  test_solver_public_behavior.py
tools/: configure_freecad_venv.ps1
