[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "rabbit-spring"
version = "0.1.0"
description = "Generic compression spring solution finder with optional FreeCAD-backed model export."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
  { name = "Rabbit Spring Contributors" },
]
dependencies = [
  "pydantic>=2.12",
]

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "pyright>=1.1",
  "pytest>=8",
  "ruff>=0.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "freecad: integration tests that require FreeCAD, Part, and MeshPart modules",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.hatch.build.targets.wheel]
packages = ["src/rabbit_spring"]
