[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "rabbit-spring"
version = "0.1.0"
description = "Generic compression spring solution finder with optional FreeCAD-backed model export."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
  { name = "Rabbit Spring Contributors" },
]
keywords = ["cad", "compression-spring", "freecad", "pydantic", "spring-design"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Manufacturing",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Topic :: Scientific/Engineering",
  "Typing :: Typed",
]
dependencies = [
  "pydantic>=2.12",
]

[project.urls]
Homepage = "https://github.com/cududa/rabbit-spring"
Repository = "https://github.com/cududa/rabbit-spring"
Issues = "https://github.com/cududa/rabbit-spring/issues"

[project.optional-dependencies]
dev = [
  "build>=1.2",
  "pyright>=1.1",
  "pytest>=8",
  "ruff>=0.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
  "freecad: integration tests that require FreeCAD, Part, and MeshPart modules",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.hatch.build.targets.wheel]
packages = ["src/rabbit_spring"]
